--- a/android/src/main/res/layout/card_scanner_camera_activity.xml
+++ b/android/src/main/res/layout/card_scanner_camera_activity.xml
@@ -21,12 +21,12 @@
 
             <Button
                 android:id="@+id/backButton"
+                android:layout_width="20dp"
+                android:layout_height="17dp"
                 android:layout_marginStart="28dp"
                 android:layout_marginTop="28dp"
-                android:layout_width="20dp"
                 android:background="@drawable/ic_back_arrow"
-                android:layout_height="17dp"
-                android:textSize="24sp"/>
+                android:textSize="24sp" />
 
 
         </RelativeLayout>
@@ -73,18 +73,18 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@color/semitransparent" >
+            android:background="@color/semitransparent">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:lineSpacingExtra="6sp"
-            android:layout_centerInParent="true"
-            android:text="Scan your card to proceed"
-            android:textAlignment="center"
-            android:textColor="#f0f0f5"
-            android:textSize="12sp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:lineSpacingExtra="6sp"
+                android:text="Digitalize seu cartão"
+                android:textAlignment="center"
+                android:textColor="#f0f0f5"
+                android:textSize="12sp" />
 
         </RelativeLayout>
 
