--- a/android/src/main/res/layout/card_scanner_camera_activity.xml
+++ b/android/src/main/res/layout/card_scanner_camera_activity.xml
@@ -75,16 +75,15 @@
             android:layout_weight="1"
             android:background="@color/semitransparent" >
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:lineSpacingExtra="6sp"
-            android:layout_centerInParent="true"
-            android:text="Scan your card to proceed"
-            android:textAlignment="center"
-            android:textColor="#f0f0f5"
-            android:textSize="12sp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:lineSpacingExtra="6sp"
+                android:text="Digitalize seu cartão"
+                android:textAlignment="center"
+                android:textColor="#f0f0f5"
+                android:textSize="12sp" />
 
         </RelativeLayout>
 
